# langchain-mcp-sample

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/: copilot-instructions.md
src/app/: agent_mcp_demo.py  app.py  config.py  document_loader.py  index_rag.py  index_rag_google.py  llm_factory.py  main.py  mcp_client.py  mcp_client_demo.py  pbac.py  rag.py  rag_engine.py
src/app/templates/: index.html
src/langchain_mcp_sample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mcp_server/: research_server.py  server.py  tools.py
tests/: test_config.py  test_tools.py
