[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-mcp-sample"
version = "0.1.0"
description = "Sample LangChain app with MCP server and provider-switchable LLM backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "langchain-openai>=0.2.0",
  "langchain-ollama>=0.2.0",
  "chromadb>=0.5.5",
  "mcp>=1.10.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.2",
  "sentence-transformers>=3.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
